fix: trying to refact user
